# abstract_essentials

./: .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
A_E_data/: big_scan.py  big_scan_collate.py
abstract_ai/: PKG-INFO  README.md  docusigns.txt  requirements.txt  setup.py  startup.py
abstract_ai/abstract_ai/: api_calls.py  create_prompt.py  data_handler.py  endpoints.py  message_aggregator.py  prompts.py  response_handling.py  tokenization.py
abstract_ai/tests/: guitemp.py  tokenize.py
abstract_api/abstract_api/: api_call.py
abstract_audio/: PKG-INFO  README.md  setup.py
abstract_audio/abstract_audio/: audio_player.py  cmd_utils.py  speech_to_text.py
abstract_audio/src/: speech_to_text_gui.py
abstract_authority/abstract_authority/: get_pass.py  missing_import_install.py
abstract_blockchain/: LICENSE.txt  MANIFEST.in  README.md  output.txt  setup.py
abstract_gui/: PKG-INFO  README.md  setup.py
abstract_gui/abstract_gui/: __init__.py
abstract_gui/src/: abstract_gui.py
abstract_images/: README.md  setup.py
abstract_images/abstract_images/: image_utils.py  ocr_tools.py  pdf_module_2.py  pdf_tools.py
abstract_modules/: README.md  setup.py
abstract_modules/abstract_modules/: README.md  create_folder.py  docstring_header_aggregation.py  (+1 more)
abstract_security/: PKG-INFO  README.md  setup.py
abstract_utilities/: README.md  setup.py
abstract_webtools/: LICENSE  NEW_WEB_TOOLS.PY  PKG-INFO  README.md  README.md.txt  __init__.py  abstract_websites.py  abstract_webtools.py  requirements.txt  requirements.txt.txt  setup.py
test/: README.md
(+316 files in other folders)
